syntax = "proto3";

service Discount {
  rpc Calculate (Request) returns (Response) {}
}

message Request {
  int32 product_id = 1;
  int32 user_id = 2;
}

message Response {
  float percentage = 1;
  int32 value_in_cents = 2;
}